<resources>
    <string name="app_name">iClock</string>
    <string name="pin_hint">PIN</string>
    <string name="ia_system_waiting">IA system waiting</string>
    <string name="status_ready">Listo</string>
    <string name="btn_marcaje">Ingresar Marcaje</string>
    <string name="btn_rostro">+ Enrolar Nuevo Rostro</string>
    <string name="btn_reset">Resetear</string>
    <string name="validating_pin">Validando PIN: %1$s</string>
    <string name="face_detected">Rostro detectado</string>


</resources>